fixing alignment for mobile

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -18,7 +18,7 @@ header {
   justify-content: center;
   background-image: url(https://images.pexels.com/photos/2395249/pexels-photo-2395249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
   background-size: cover;
-  height: 60vh;
+  height: 50vh;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -67,9 +67,8 @@ h3 {
   font-family: "Courier New", Courier, monospace;
   color: hsl(350, 66%, 24%);
   text-align: center;
-  max-width: 40ch;
-  justify-content: center;
-  margin-left: 50vh;
+
+  height: 60vh;
 }
 
 @media screen and (min-width: 600px) {
@@ -77,5 +76,13 @@ h3 {
     height: 100vh;
     transition-duration: 0.3s;
     padding-top: 10%;
+  }
+
+  h3 {
+    height: 100vh;
+    transition-duration: 0.3s;
+    padding-top: 10%;
+    justify-content: center;
+    display: flex;
   }
 }
